<resources>
    <string name="app_name" translatable="false">DIGITAL PUSAULI</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>


    <string name="select_categories">Select Categories</string>

    <string name="medical" translatable="false">Medical</string>
    <string name="hospital" translatable="false">Hospital</string>
    <string name="electronic">Electronic</string>
    <string name="generalStore">General Store</string>
    <string name="sweets">Sweets</string>
    <string name="fruite">Fruites</string>
    <string name="vegetable">Vegetables</string>
    <string name="shoes">Shoes</string>
    <string name="cloth" translatable="false">Cloth</string>
    <string name="carpenter">Car Penter</string>
    <string name="farincher">Farincher</string>
    <string name="restaurants">Restaurants</string>
    <string name="school">School</string>
    <string name="stacenary">Stacenary</string>
    <string name="hotel">Hotel</string>
    <string name="temple">Temple</string>
    <string name="tuition_study">Tuition</string>
    <string name="bank" translatable="false">Bank</string>
    <string name="grocery">Grocery</string>
    <string name="mobile">Mobile</string>
    <string name="jewels">Jewels</string>
    <string name="vehicle" translatable="false">Vehicle</string>
    <string name="petrol">Petrol Pump</string>
    <string name="post_office">Post Office</string>
    <string name="railway_station">Railway Station</string>
    <string name="bus_stand" translatable="false">Bus Stand</string>
    <string name="auto" translatable="false">Auto</string>
    <string name="results_found">No Results Found</string>
    <string name="network_status">Good! Connected to Internet</string>
    <string name="network_status_false">Sorry! No internet available</string>
    <string name="back_press">Please click BACK again to exit</string>


    <string name="about_college">As part of its initiative to improve educational system in India, Bennett, Coleman, and Co. Ltd. established Bennett University in Greater Noida, Uttar Pradesh. It is a private University which began operation in 2016, with academic operation beginning in August 2016.</string>

    <string name="campush">The foundation for Bennettent distance from the southern part of Delhi and is located in a peaceful locale. Once fully functional, the 68 acre campus of the university is expected to accommodate over 13,000 students.</string>

    <string name="histroy">The University aims to set a benchmark for higher education by introducing new methods of teaching, training, and research. The university boasts of Johnson Cornell University and Georgia Institute of Technology as its academic partner.</string>


    <string name="app_me" translatable="false">Get My College opens doors for numerous opportunities for your future.</string>


    <string name="welcome">Language Change Example</string>
    <string name="pref_key_root" translatable="false">pref_root</string>
    <string name="pref_key_language" translatable="false">pref_language</string>
    <string name="language">Language</string>
    <string name="device">Device</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign in</string>

    <string name="enter_shop_name">Shop Name</string>
    <string name="shop_registation">Shop Registation</string>
    <string name="shop_email_id">Shop Email ID</string>
    <string name="shop_mobile">Shop Mobile</string>
    <string name="shop_address">Shop Address</string>
    <string name="shop_nearst">Shop Nearst</string>
    <string name="shop_time">Shop Time</string>
    <string name="qwner_name">Owner Name</string>
    <string name="owner_email">Owner Email</string>
    <string name="owner_contact">Owner Contact</string>
    <string name="submit">Submit</string>
    <string name="for_shop">For Shop</string>
    <string name="for_ower">For Ower</string>

    <string-array name="languages" translatable="false">
        <item>en-US</item>
        <item>az</item>
        <item>de</item>
        <item>el</item>
        <item>es</item>
        <item>fr</item>
        <item>gd</item>
        <item>hi</item>
        <item>hu</item>
        <item>id</item>
        <item>it</item>
        <item>ja</item>
        <item>ko</item>
        <item>nb</item>
        <item>nl</item>
        <item>pl</item>
        <item>ru</item>
        <item>sv</item>
        <item>th</item>
        <item>uz</item>
        <item>zh-CN</item>
        <item>zh-TW</item>
        <item>zh-HK</item>
        <item>en-GB</item>
        <item>tr</item>
        <item>eu</item>
        <item>he</item>
        <item>pt-BR</item>
        <item>ar</item>
        <item>ro</item>
        <item>mk</item>
        <item>en-AU</item>
        <item>sr</item>
        <item>sk</item>
        <item>cy</item>
        <item>da</item>
    </string-array>


    <string name="choose_your_shop_color">Choose your shop color</string>
    <string name="add_your_shop_location">Add Your Shop Location</string>
    <string name="api_key_google_places">AIzaSyBr7PJ9TIr19_xJRZ5YpMEYWfmBrtwaTts</string>


</resources>
