<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:padding="5dp"
        android:id="@+id/list1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:padding="5dp"
            android:layout_marginBottom="5dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ABOUT COLLEGE"
                        android:textColor="@color/test1"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <View
                        android:id="@+id/myview"
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#3343"
                        />

                    <TextView
                        android:id="@+id/clg_about_1"
                        android:layout_toRightOf="@+id/logo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_college"
                        android:textColor="#665757"
                        android:textSize="12sp"
                        android:textStyle="normal"/>
                </LinearLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="COLLEGE HISTORY"
                        android:textColor="@color/test1"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <View
                        android:id="@+id/myview2"
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#3343"
                        />

                    <TextView
                        android:id="@+id/clg_about_2"
                        android:layout_toRightOf="@+id/logo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/histroy"
                        android:textColor="#665757"
                        android:textSize="12sp"
                        android:textStyle="normal"/>
                </LinearLayout>

                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="INFORMATION"
                        android:textColor="@color/test1"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <View

                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#3343"
                        />

                    <TextView
                        android:id="@+id/clg_about_3"
                        android:layout_toRightOf="@+id/logo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/histroy"
                        android:textColor="#665757"
                        android:textSize="12sp"
                        android:textStyle="normal"/>
                </LinearLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="ADDRESS"
                        android:textColor="@color/test1"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <View

                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#3343"
                        />

                    <TextView
                        android:id="@+id/clg_address"
                        android:layout_toRightOf="@+id/logo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/campush"
                        android:textColor="#665757"
                        android:textSize="12sp"
                        android:textStyle="normal"/>
                </LinearLayout>
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mobile No"
                        android:textColor="@color/test1"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <View

                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#3343"
                        />

                    <TextView
                        android:id="@+id/clg_number"
                        android:layout_toRightOf="@+id/logo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/campush"
                        android:textColor="#665757"
                        android:textSize="12sp"
                        android:textStyle="normal"/>
                </LinearLayout>
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Website"
                        android:textColor="@color/test1"
                        android:textSize="13sp"
                        android:textStyle="bold"/>

                    <View
                        android:layout_marginBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#3343"
                        />

                    <TextView
                        android:id="@+id/clg_website"
                        android:layout_toRightOf="@+id/logo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/campush"
                        android:textColor="#665757"
                        android:textSize="12sp"
                        android:textStyle="normal"/>
                </LinearLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

